src/objects/TR1__Job_Board_Search_Options__c.object
<CustomObject>
    <fields>
        <fullName>TR1__AuthorizedforSelectedCountry__c</fullName>
        <label>Authorized for Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__CareerBuilderCategory__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Admin &amp; Clerical</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Biotech</fullName>
                </value>
                <value>
                    <fullName>Broadcast/Journalism</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Distribution/Shipping</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Entry Level</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>General Business</fullName>
                </value>
                <value>
                    <fullName>General Labor</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Grocery</fullName>
                </value>
                <value>
                    <fullName>Health Care</fullName>
                </value>
                <value>
                    <fullName>Hotel/Hospitality</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Installation/Repair</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__CareerBuilderCountry__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>United States of America</fullName>
                    <default>true</default>
                    <label>United States of America</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__CareerBuilderCurrentlyEmployed__c</fullName>
        <label>Currently Employed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>any</fullName>
                </value>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__CareerBuilderEmploymentType__c</fullName>
        <label>Employment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Full-Time</fullName>
                </value>
                <value>
                    <fullName>Part-Time</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Intern</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__CareerBuilderLocationCountry__c</fullName>
        <label>Location Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All countries</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia-Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Isl</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__CareerBuilderMaxResults__c</fullName>
        <label>Max Results</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                    <default>true</default>
                    <label>200</label>
                </value>
                <value>
                    <fullName>500</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__CareerBuilderMaximumExperience__c</fullName>
        <label>Maximum Experience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>any</fullName>
                </value>
                <value>
                    <fullName>1 year</fullName>
                </value>
                <value>
                    <fullName>2 years</fullName>
                </value>
                <value>
                    <fullName>3 years</fullName>
                </value>
                <value>
                    <fullName>4 years</fullName>
                </value>
                <value>
                    <fullName>5 years</fullName>
                </value>
                <value>
                    <fullName>10 years</fullName>
                </value>
                <value>
                    <fullName>15 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__CareerBuilderMinimumDegree__c</fullName>
        <label>Minimum Degree</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>2 Year Degree</fullName>
                </value>
                <value>
                    <fullName>4 Year Degree</fullName>
                </value>
                <value>
                    <fullName>Graduate Degree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__CareerBuilderMinimumExperience__c</fullName>
        <label>Minimum Experience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>any</fullName>
                </value>
                <value>
                    <fullName>1 year</fullName>
                </value>
                <value>
                    <fullName>2 years</fullName>
                </value>
                <value>
                    <fullName>3 years</fullName>
                </value>
                <value>
                    <fullName>4 years</fullName>
                </value>
                <value>
                    <fullName>5 years</fullName>
                </value>
                <value>
                    <fullName>10 years</fullName>
                </value>
                <value>
                    <fullName>15 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__CareerBuilderNiche__c</fullName>
        <label>Niche</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>CareerRookie</fullName>
                </value>
                <value>
                    <fullName>Miracle Workers</fullName>
                </value>
                <value>
                    <fullName>Sologig</fullName>
                </value>
                <value>
                    <fullName>StaffNurse</fullName>
                </value>
                <value>
                    <fullName>Work In Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__CareerBuilderNoSalaryInformation__c</fullName>
        <label>No Salary Information</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exclude unspecified</fullName>
                </value>
                <value>
                    <fullName>Include unspecified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__CareerBuilderRadius__c</fullName>
        <label>Radius</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 mile</fullName>
                </value>
                <value>
                    <fullName>2 miles</fullName>
                </value>
                <value>
                    <fullName>3 miles</fullName>
                </value>
                <value>
                    <fullName>4 miles</fullName>
                </value>
                <value>
                    <fullName>5 miles</fullName>
                </value>
                <value>
                    <fullName>10 miles</fullName>
                </value>
                <value>
                    <fullName>15 miles</fullName>
                </value>
                <value>
                    <fullName>20 miles</fullName>
                </value>
                <value>
                    <fullName>25 miles</fullName>
                    <default>true</default>
                    <label>25 miles</label>
                </value>
                <value>
                    <fullName>30 miles</fullName>
                </value>
                <value>
                    <fullName>40 miles</fullName>
                </value>
                <value>
                    <fullName>50 miles</fullName>
                </value>
                <value>
                    <fullName>75 miles</fullName>
                </value>
                <value>
                    <fullName>100 miles</fullName>
                </value>
                <value>
                    <fullName>125 miles</fullName>
                </value>
                <value>
                    <fullName>150 miles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__CareerBuilderResumeFreshness__c</fullName>
        <label>Resume Freshness</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Within 1 day</fullName>
                </value>
                <value>
                    <fullName>Within 1 week</fullName>
                </value>
                <value>
                    <fullName>Within 1 months</fullName>
                </value>
                <value>
                    <fullName>Within 2 months</fullName>
                </value>
                <value>
                    <fullName>Within 3 months</fullName>
                </value>
                <value>
                    <fullName>Within 6 months</fullName>
                </value>
                <value>
                    <fullName>Within 9 months</fullName>
                </value>
                <value>
                    <fullName>Within year</fullName>
                </value>
                <value>
                    <fullName>All CVs</fullName>
                    <default>true</default>
                    <label>All CVs</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__CareerBuilderSecurityClearance__c</fullName>
        <label>Security Clearance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>any</fullName>
                </value>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__CareerBuilderState__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TR1__CareerBuilderLocationCountry__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Any State</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Dist of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__CareerBuilderWillingToRelocate__c</fullName>
        <label>Willing To Relocate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>state specified</fullName>
                </value>
                <value>
                    <fullName>city specified</fullName>
                </value>
                <value>
                    <fullName>nation specified</fullName>
                </value>
                <value>
                    <fullName>all the above</fullName>
                </value>
                <value>
                    <fullName>none</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__CareerBuilderWorkStatus__c</fullName>
        <label>Work Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Can work for any employer</fullName>
                </value>
                <value>
                    <fullName>Can work for current employer</fullName>
                </value>
                <value>
                    <fullName>Citizen</fullName>
                </value>
                <value>
                    <fullName>Not Specified</fullName>
                </value>
                <value>
                    <fullName>Seeking work authorization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__DiceAnnualSalary__c</fullName>
        <label>Annual Salary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Negotiable</fullName>
                    <default>true</default>
                    <label>Negotiable</label>
                </value>
                <value>
                    <fullName>Less than $30,000</fullName>
                </value>
                <value>
                    <fullName>$30,000 to $39,999</fullName>
                </value>
                <value>
                    <fullName>$40,000 to $49,999</fullName>
                </value>
                <value>
                    <fullName>$50,000 to $59,999</fullName>
                </value>
                <value>
                    <fullName>$60,000 to $69,999</fullName>
                </value>
                <value>
                    <fullName>$70,000 to $79,999</fullName>
                </value>
                <value>
                    <fullName>$80,000 to $89,999</fullName>
                </value>
                <value>
                    <fullName>$90,000 to $99,999</fullName>
                </value>
                <value>
                    <fullName>$100,000 to $124,999</fullName>
                </value>
                <value>
                    <fullName>$125,000 to $149,999</fullName>
                </value>
                <value>
                    <fullName>$150,000 to $199,000</fullName>
                </value>
                <value>
                    <fullName>$200,000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__DiceCountry__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Preference</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__DiceEducation__c</fullName>
        <label>Education</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Preference</fullName>
                </value>
                <value>
                    <fullName>Military Service</fullName>
                </value>
                <value>
                    <fullName>Vocational School</fullName>
                </value>
                <value>
                    <fullName>High School</fullName>
                </value>
                <value>
                    <fullName>Associate</fullName>
                </value>
                <value>
                    <fullName>Pre-Bachelors</fullName>
                </value>
                <value>
                    <fullName>Bachelors</fullName>
                </value>
                <value>
                    <fullName>Post-Bachelors</fullName>
                </value>
                <value>
                    <fullName>MBA</fullName>
                </value>
                <value>
                    <fullName>Masters</fullName>
                </value>
                <value>
                    <fullName>Post-Masters</fullName>
                </value>
                <value>
                    <fullName>Doctorate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__DiceHourlySalary__c</fullName>
        <label>Hourly Salary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Negotiable</fullName>
                </value>
                <value>
                    <fullName>Less than $20</fullName>
                </value>
                <value>
                    <fullName>$20 to $24</fullName>
                </value>
                <value>
                    <fullName>$25 to $29</fullName>
                </value>
                <value>
                    <fullName>$30 to $34</fullName>
                </value>
                <value>
                    <fullName>$35 to $39</fullName>
                </value>
                <value>
                    <fullName>$40 to $44</fullName>
                </value>
                <value>
                    <fullName>$45 to $49</fullName>
                </value>
                <value>
                    <fullName>$50 to $59</fullName>
                </value>
                <value>
                    <fullName>$60 to $69</fullName>
                </value>
                <value>
                    <fullName>$70 to $79</fullName>
                </value>
                <value>
                    <fullName>$80 to $89</fullName>
                </value>
                <value>
                    <fullName>$90 to $99</fullName>
                </value>
                <value>
                    <fullName>$100 to $124</fullName>
                </value>
                <value>
                    <fullName>$125 to $149</fullName>
                </value>
                <value>
                    <fullName>$150 to $174</fullName>
                </value>
                <value>
                    <fullName>$175 to $199</fullName>
                </value>
                <value>
                    <fullName>$200 to $249</fullName>
                </value>
                <value>
                    <fullName>$250 to $299</fullName>
                </value>
                <value>
                    <fullName>$300+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__DiceIndustry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
                <value>
                    <fullName>Engineering/Architecture</fullName>
                </value>
                <value>
                    <fullName>Sales and Marketing</fullName>
                </value>
                <value>
                    <fullName>Human Resources and Staffing</fullName>
                </value>
                <value>
                    <fullName>Healthcare and Science</fullName>
                </value>
                <value>
                    <fullName>Education and Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__DiceJobType__c</fullName>
        <label>Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full-time</fullName>
                </value>
                <value>
                    <fullName>Part-time</fullName>
                </value>
                <value>
                    <fullName>Contract/Corp-to-Corp</fullName>
                </value>
                <value>
                    <fullName>Contract/Independent</fullName>
                </value>
                <value>
                    <fullName>Contract/W2</fullName>
                </value>
                <value>
                    <fullName>Contract/Hire/C2C</fullName>
                </value>
                <value>
                    <fullName>Contract/Hire/Ind</fullName>
                </value>
                <value>
                    <fullName>Contract/Hire/W2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__DiceMaxResults__c</fullName>
        <label>Max Results</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                    <default>true</default>
                    <label>200</label>
                </value>
                <value>
                    <fullName>500</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__DiceRadius__c</fullName>
        <label>Radius</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5 miles</fullName>
                </value>
                <value>
                    <fullName>10 miles</fullName>
                </value>
                <value>
                    <fullName>20 miles</fullName>
                </value>
                <value>
                    <fullName>30 miles</fullName>
                    <default>true</default>
                    <label>30 miles</label>
                </value>
                <value>
                    <fullName>40 miles</fullName>
                </value>
                <value>
                    <fullName>50 miles</fullName>
                </value>
                <value>
                    <fullName>75 miles</fullName>
                </value>
                <value>
                    <fullName>100 miles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>